--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -232,7 +232,7 @@
 
 .template-panel-display {
     -fx-background-color: transparent;
-    -fx-font-family: "Segoe UI Light";
+    -fx-font-family: "Segoe UI Semilight";
     -fx-font-size: 13pt;
     -fx-text-fill: white;
 }
@@ -246,8 +246,8 @@
 
 .expanded-entry-display {
     -fx-background-color: transparent;
-    -fx-font-family: "Segoe UI";
-    -fx-font-size: 13pt;
+    -fx-font-family: "Segoe UI Semilight";
+    -fx-font-size: 12pt;
     -fx-text-fill: white;
 }
 
@@ -258,7 +258,7 @@
 }
 
 .expanded-body-text {
-    -fx-font-family: "Segoe UI";
+    -fx-font-family: "Segoe UI Semilight";
     -fx-font-size: 16px;
     -fx-text-fill: white;
 }
