Make template show filepath in UI heading

--- a/src/main/resources/view/TemplatePanel.fxml
+++ b/src/main/resources/view/TemplatePanel.fxml
@@ -9,7 +9,8 @@
       xmlns:fx="http://javafx.com/fxml/1"
       fx:id="templatePanel">
     <HBox spacing="20" alignment="CENTER">
-        <Label styleClass="cell_list_label" text="Current Template"/>
+        <Label fx:id="templateLabel" styleClass="cell_list_label" text="Current Template"/>
+        <Label styleClass="expanded-entry-body"/>
     </HBox>
     <TextArea fx:id="templatePanelDisplay" editable="false" styleClass="template-panel-display" VBox.vgrow="ALWAYS"/>
 </VBox>
